tests/snapshots/tui__change_workflow_escape_back_to_list@root_4_confirm.snap
---
source: tests/tui.rs
description: "--diff change → Enter → Esc → Down → Enter → Ctrl+u → type 'github:nixos/nixpkgs/nixos-unstable' → Enter"
expression: "snapshot(&mut confirm_terminal, session.app())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 12 },
    content: [
        "────────────────────────────────────────────────────────────────────────────────",
        "--- original                                                                    ",
        "+++ modified                                                                    ",
        "@@ -4,7 +4,7 @@                                                                 ",
        "   inputs = {                                                                   ",
        "     nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";                       ",
        "                                                                                ",
        "-    flake-utils.url = "github:numtide/flake-utils";                            ",
        "+    flake-utils.url = "github:nixos/nixpkgs/nixos-unstable";                   ",
        "                                                                                ",
        "────────────────────────────────────────────────────────────────────────────────",
        " Change  Apply?  y es  n o  b ack                                    flake-edit ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 8, y: 11, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 19, y: 11, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 22, y: 11, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 25, y: 11, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 27, y: 11, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 30, y: 11, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 68, y: 11, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
    ]
}
